# CS_398-runpod

./: PLAN.md  download_datasets.sh  pyproject.toml
ser_benchmark/: app.py  requirements.txt  ui_common.py
ser_benchmark/datasets/: __init__.py  base.py  esd.py  ravdess.py
ser_benchmark/evaluation/: __init__.py  confusion.py  metrics.py
ser_benchmark/models/: __init__.py  audeering_wrapper.py  base.py  emotion2vec_wrapper.py
ser_benchmark/pages/: 1_Single_Inference.py  2_Benchmark.py  3_Comparison.py
ser_benchmark/results/: emotion2vec+ Large_ESD_20260225_081048.json  emotion2vec+ Large_RAVDESS_20260225_073959.json  emotion2vec+ Large_RAVDESS_20260225_074309.json  emotion2vec+ Large_RAVDESS_20260225_081015.json
